--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -31,4 +31,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.289" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ragstwsyewwh"
+        tools:layout_editor_absoluteX="155dp"
+        tools:layout_editor_absoluteY="447dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
