--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,45 @@
     android:background="@color/backgroundColor"
     tools:context=".ui.home.HomeFragment">
 
+    <HorizontalScrollView
+        android:layout_width="412dp"
+        android:layout_height="780dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="464dp"
+                android:layout_height="283dp"
+                android:layout_weight="1"
+                android:src="@drawable/mcdonalds" />
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="345dp"
+                android:layout_height="418dp"
+                android:layout_weight="1"
+                android:src="@drawable/culvers" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="368dp"
+                android:layout_height="245dp"
+                android:layout_weight="1"
+                android:src="@drawable/pokey" />
+
+        </LinearLayout>
+    </HorizontalScrollView>
+
     <EditText
         android:id="@+id/editTextText2"
         android:layout_width="378dp"
@@ -23,40 +62,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.03" />
 
-    <ScrollView
-        android:layout_width="409dp"
-        android:layout_height="794dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="105dp"
-                android:layout_height="368dp"
-                android:layout_weight="1"
-                android:src="@drawable/culvers" />
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/pokey" />
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="wrap_content"
-                android:layout_height="633dp"
-                android:layout_weight="1"
-                android:src="@drawable/mcdonalds" />
-        </LinearLayout>
-    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
