--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,41 +7,129 @@
     android:background="@color/backgroundColor"
     tools:context=".ui.home.HomeFragment">
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="357dp"
+        android:layout_height="52dp"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="@string/featured_restaurants"
+        android:textColor="@color/black"
+        android:textSize="@dimen/Subheadingsize"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.685"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.138"
+        tools:ignore="TextSizeCheck" />
+
     <HorizontalScrollView
-        android:layout_width="412dp"
-        android:layout_height="780dp"
+        android:layout_width="wrap_content"
+        android:layout_height="258dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintVertical_bias="0.293"
+        tools:ignore="VisualLintBounds">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:contentDescription="@string/todo"
+            android:orientation="horizontal"
+            tools:ignore="VisualLintBounds">
 
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="464dp"
-                android:layout_height="283dp"
+            <ImageButton
+                android:id="@+id/culvers"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@drawable/mcdonalds" />
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="345dp"
-                android:layout_height="418dp"
-                android:layout_weight="1"
+                android:contentDescription="@string/culvers"
                 android:src="@drawable/culvers" />
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="368dp"
-                android:layout_height="245dp"
+            <ImageButton
+                android:id="@+id/wendys"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@drawable/pokey" />
+                android:contentDescription="@string/wendys"
+                android:onClick="selectedRestaurant"
+                android:src="@drawable/wendy" />
+
+            <ImageButton
+                android:id="@+id/tacobell"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:contentDescription="@string/tacobell"
+                android:src="@drawable/tacobell" />
+
+            <ImageButton
+                android:id="@+id/subway"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:contentDescription="@string/subway"
+                android:src="@drawable/subway" />
+
+            <ImageButton
+                android:id="@+id/pizzaranch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:contentDescription="@string/pizzaranch"
+                android:src="@drawable/pizzaranch" />
+
+            <ImageButton
+                android:id="@+id/papajohns"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:contentDescription="@string/papajohns"
+                android:src="@drawable/papajohns" />
+
+            <ImageButton
+                android:id="@+id/mcdonalds"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:contentDescription="@string/mcdonalds"
+                android:src="@drawable/mcdonalds" />
+
+            <ImageButton
+                android:id="@+id/littlecaesars"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:contentDescription="@string/littlecaesars"
+                android:src="@drawable/littlecaesars"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+            <ImageButton
+                android:id="@+id/kfc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:contentDescription="@string/kfc"
+                android:src="@drawable/kfc"
+                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
+
+            <ImageButton
+                android:id="@+id/dairyqueen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:contentDescription="@string/dairyqueen"
+                android:src="@drawable/dq" />
+
+            <ImageButton
+                android:id="@+id/arbys"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/arbys"
+                android:src="@drawable/arby" />
 
         </LinearLayout>
     </HorizontalScrollView>
