--- a/app/src/main/res/layout/activity_restaurantinfo.xml
+++ b/app/src/main/res/layout/activity_restaurantinfo.xml
@@ -5,12 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     tools:context=".restaurantinfo">
 
     <TextView
         android:id="@+id/dispalyRestaurantName"
-        android:layout_width="357dp"
-        android:layout_height="52dp"
+        android:layout_width="303dp"
+        android:layout_height="47dp"
         android:gravity="center_horizontal|center_vertical"
         android:textColor="@color/black"
         android:textSize="@dimen/Subheadingsize"
@@ -20,4 +21,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.03"
         tools:ignore="TextSizeCheck" />
+
+    <ImageView
+        android:id="@+id/displayRestaurantLogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.076"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.143"
+        app:srcCompat="@drawable/tacobell" />
 </androidx.constraintlayout.widget.ConstraintLayout>
