--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="headingsize">40sp</dimen>
     <dimen name="Subheadingsize">30sp</dimen>
+    <dimen name="smallertext">24sp</dimen>
 </resources>
