--- a/app/src/main/res/layout/activity_carryout.xml
+++ b/app/src/main/res/layout/activity_carryout.xml
@@ -8,6 +8,32 @@
     android:background="@color/backgroundColor"
     tools:context=".carryout">
 
+    <TextView
+        android:id="@+id/displayInfo3"
+        android:layout_width="387dp"
+        android:layout_height="486dp"
+        android:layout_gravity="center_horizontal"
+        android:text="Will have to list the menu (may want to make this a scrollview) "
+        android:textSize="@dimen/smallertext"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.061" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="290dp"
+        android:layout_height="83dp"
+        android:text="@string/order"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.862" />
+
     <Button
         android:id="@+id/button6"
         android:layout_width="167dp"
@@ -20,4 +46,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.98" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
