--- a/app/src/main/res/layout/activity_reviews.xml
+++ b/app/src/main/res/layout/activity_reviews.xml
@@ -8,6 +8,19 @@
     android:background="@color/backgroundColor"
     tools:context=".reviews">
 
+    <Button
+        android:id="@+id/button10"
+        android:layout_width="167dp"
+        android:layout_height="83dp"
+        android:onClick="addReview"
+        android:text="@string/add_review"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.867" />
+
     <TextView
         android:id="@+id/displayInfo2"
         android:layout_width="387dp"
@@ -20,7 +33,7 @@
         app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.686" />
+        app:layout_constraintVertical_bias="0.096" />
 
     <Button
         android:id="@+id/button8"
