--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,6 +8,20 @@
     tools:context=".ui.home.HomeFragment">
 
     <TextView
+        android:id="@+id/displaySearchResult"
+        android:layout_width="379dp"
+        android:layout_height="287dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal|center_vertical"
+        android:textColor="@color/black"
+        android:textSize="@dimen/smallertext"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.844" />
+
+    <TextView
         android:id="@+id/textView5"
         android:layout_width="357dp"
         android:layout_height="52dp"
@@ -24,7 +38,7 @@
         tools:ignore="TextSizeCheck" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/search"
         android:layout_width="113dp"
         android:layout_height="51dp"
         android:onClick="startSearch"
@@ -148,13 +162,13 @@
     </HorizontalScrollView>
 
     <EditText
-        android:id="@+id/editTextText2"
+        android:id="@+id/inputSearch"
         android:layout_width="378dp"
         android:layout_height="70dp"
         android:autofillHints=""
         android:background="@color/white"
         android:ems="10"
-        android:hint="@string/search"
+        android:hint="@string/searchs"
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
