--- a/app/src/main/res/layout/activity_reviews.xml
+++ b/app/src/main/res/layout/activity_reviews.xml
@@ -15,7 +15,8 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal|center_vertical"
         android:text="Will display 1 2 3 4 or 5 stars"
-        android:textSize="@dimen/smallertext"
+        android:textColor="@color/black"
+        android:textSize="@dimen/Subheadingsize"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.571"
@@ -43,6 +44,7 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal|center_vertical"
         android:text="Reviews for a specific restaurant will go here will probably list first 3 reviews"
+        android:textColor="@color/black"
         android:textSize="@dimen/smallertext"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
