Takes order input

--- a/app/src/main/res/layout/activity_carryout.xml
+++ b/app/src/main/res/layout/activity_carryout.xml
@@ -23,8 +23,8 @@
 
     <TextView
         android:id="@+id/displayInfo4"
-        android:layout_width="211dp"
-        android:layout_height="477dp"
+        android:layout_width="166dp"
+        android:layout_height="468dp"
         android:layout_gravity="center_horizontal"
         android:textSize="@dimen/smallertext"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,16 +48,17 @@
 
     <Button
         android:id="@+id/button9"
-        android:layout_width="290dp"
-        android:layout_height="83dp"
+        android:layout_width="190dp"
+        android:layout_height="76dp"
+        android:onClick="takeOrder"
         android:text="@string/order"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.027"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.862" />
+        app:layout_constraintVertical_bias="0.955" />
 
     <Button
         android:id="@+id/button6"
@@ -68,8 +69,33 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.897"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.98" />
+        app:layout_constraintVertical_bias="0.955" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="381dp"
+        android:layout_height="47dp"
+        app:layout_constraintBottom_toTopOf="@+id/button6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.985" />
+
+    <EditText
+        android:id="@+id/orderInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.542"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.721" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
