Reviews Should Be Done

--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -26,7 +26,8 @@
                 android:layout_width="368dp"
                 android:layout_height="1358dp"
                 android:layout_gravity="center_horizontal"
-                android:text="Past reviews will be displayed here (Need to code yet) Will pull in from database" />
+                android:text="Past reviews will be displayed here (Need to code yet) Will pull in from database"
+                android:textSize="@dimen/smallertext" />
         </LinearLayout>
     </ScrollView>
 
