--- a/app/src/main/res/layout/activity_carryout.xml
+++ b/app/src/main/res/layout/activity_carryout.xml
@@ -8,44 +8,6 @@
     android:background="@color/backgroundColor"
     tools:context=".carryout">
 
-    <TextView
-        android:id="@+id/displayInfo3"
-        android:layout_width="97dp"
-        android:layout_height="464dp"
-        android:layout_gravity="center_horizontal"
-        android:textSize="@dimen/smallertext"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.067"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.062" />
-
-    <TextView
-        android:id="@+id/displayInfo4"
-        android:layout_width="166dp"
-        android:layout_height="468dp"
-        android:layout_gravity="center_horizontal"
-        android:textSize="@dimen/smallertext"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.059" />
-
-    <TextView
-        android:id="@+id/displayInfo5"
-        android:layout_width="97dp"
-        android:layout_height="464dp"
-        android:layout_gravity="center_horizontal"
-        android:textSize="@dimen/smallertext"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.92"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.063" />
-
     <Button
         android:id="@+id/button9"
         android:layout_width="190dp"
@@ -97,5 +59,43 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.721" />
+
+    <ScrollView
+        android:layout_width="396dp"
+        android:layout_height="480dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/displayInfo3"
+                android:layout_width="97dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textSize="@dimen/smallertext" />
+
+            <TextView
+                android:id="@+id/displayInfo4"
+                android:layout_width="199dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textSize="@dimen/smallertext" />
+
+            <TextView
+                android:id="@+id/displayInfo5"
+                android:layout_width="146dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:textSize="@dimen/smallertext" />
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
